--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,24 +2,25 @@ name: flutter_app_bazara
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
-  sdk: '>=2.17.5 <3.0.0'
+environment:
+  sdk: ">=2.17.5 <3.0.0"
 
-dependencies: 
+dependencies:
   cupertino_icons: ^1.0.2
   get_cli: ^1.8.1
   get: 4.6.5
-  flutter: 
+  flutter:
     sdk: flutter
 
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: ^2.0.0
-  flutter_test: 
+  flutter_test:
     sdk: flutter
 
-flutter: 
+flutter:
   uses-material-design: true
   assets:
     - assets/logo/
     - assets/colors/
     - assets/images/
+    - assets/buttons/
