--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,13 @@ dependencies:
   get: 4.6.5
   flutter:
     sdk: flutter
+  emoji_picker_flutter: ^1.5.0
+  flutter_launcher_icons: ^0.10.0
+  get_storage: ^2.0.3
+  lottie: ^1.4.2
+  introduction_screen: ^3.0.2
+  image_picker: ^0.8.6
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
