--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,11 @@ dependencies:
   introduction_screen: ^3.0.2
   image_picker: ^0.8.6
   intl: ^0.17.0
-  firebase_core: ^2.1.1
-  firebase_auth: ^4.1.1
-  cloud_firestore: ^4.0.4
-  firebase_storage: ^11.0.4
-  google_sign_in: ^5.4.2
+  # firebase_core: ^2.1.1
+  # firebase_auth: ^4.1.1
+  # cloud_firestore: ^4.0.4
+  # firebase_storage: ^11.0.4
+  # google_sign_in: ^5.4.2
   avatar_glow: ^2.0.2
 
 dev_dependencies:
