--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # firebase_storage: ^11.0.4
   google_sign_in: ^5.4.2
   avatar_glow: ^2.0.2
+  # flutter_screenutil: ^5.5.3+2
+
 
 dev_dependencies:
   flutter_lints: ^2.0.0
