--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   firebase_core: ^2.1.1
   firebase_auth: ^4.1.1
   # cloud_firestore: ^4.0.4
-  # firebase_storage: ^11.0.4
+  firebase_storage: ^11.0.4
   google_sign_in: ^5.4.2
   avatar_glow: ^2.0.2
   # flutter_screenutil: ^5.5.3+2
