--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   firebase_storage: ^11.0.4
   google_sign_in: ^5.4.2
   avatar_glow: ^2.0.2
+  provider: ^6.0.4
+  navigator: ^1.1.0
+  json_annotation: ^4.7.0
   # flutter_screenutil: ^5.5.3+2
 
 
