--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,13 +20,16 @@ dependencies:
   intl: ^0.17.0
   firebase_core: ^2.1.1
   firebase_auth: ^4.1.2
-  cloud_firestore: ^4.0.4
+  # cloud_firestore: ^4.0.4
   firebase_storage: ^11.0.4
   google_sign_in: ^5.4.2
   avatar_glow: ^2.0.2
   provider: ^6.0.4
   navigator: ^1.1.0
   json_annotation: ^4.7.0
+  flutter_rating_bar: ^4.0.1
+  # google_maps: ^6.2.0
+  # google_maps_flutter: ^2.2.1
   # flutter_screenutil: ^5.5.3+2
 
 
